# budgie-desktop-icons

./: README.md  meson.build
src/: desktop-manager.c  desktop-manager.h  desktop-view.c  desktop-view.h  desktop-window.c  desktop-window.h  main.c  meson.build  util.h
